--- a/Trustify.Frontend/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
+++ b/Trustify.Frontend/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
@@ -1,7 +1,20 @@
-<!-- <p>nav-menu works!</p>
-<button routerLink="/layout/sample">
-    Sample
-</button>
-<button routerLink="/layout/admin">
-    Admin
-</button> -->
+<div class="trf-nav-menu">
+    <ul>
+        <li routerLink="textual-content">
+            <mat-icon>article</mat-icon>
+            <span>Textual content</span>
+        </li>
+        <li routerLink='image-content'>
+            <mat-icon>image</mat-icon>
+            <span>Images</span>
+        </li>
+        <li routerLink="large-content">
+            <mat-icon>work_update</mat-icon>
+            <span>Large content</span>
+        </li>
+        <li routerLink="sections">
+            <mat-icon>newspaper</mat-icon>
+            <span>Sections</span>
+        </li>
+    </ul>
+</div>
