--- a/Trustify.Frontend/src/app/layout/layout/layout/layout.component.css
+++ b/Trustify.Frontend/src/app/layout/layout/layout/layout.component.css
@@ -1,7 +1,7 @@
 .trf-layout {
     display: flex;
     min-height: 85vh;
-    background-color: var(--trf-primary-background)
+    background-color: var(--trf-primary-background);
 }
 
 .trf-layout-content {
@@ -30,11 +30,11 @@
     display: flex;
     flex-direction: column;
     flex-basis: 70%;
-    height: 82vh;
-    padding:10px;
+    min-height: 82vh;
+    padding: 10px;
     flex-grow: 1;
 }
 
-.trf-features-card{
-    height: 82vh;
+.trf-features-card {
+    min-height: 82vh;
 }
