--- a/Trustify.Frontend/src/app/layout/layout/layout/layout.component.html
+++ b/Trustify.Frontend/src/app/layout/layout/layout/layout.component.html
@@ -1,56 +1,72 @@
-<trf-header></trf-header>
-
-<div class="trf-layout">
+<div style="flex-direction: column;justify-content: left;">
+    <trf-header></trf-header>
     <trf-nav-menu></trf-nav-menu>
-    <div class="trf-layout-content">
-        <mat-card class="trf-role-description">
-            <mat-card-title>Premium user</mat-card-title>
-            <mat-card-content>
-                <p>This user has the options to list all features. Permissions are: </p>
-                <ul>
-                    <li>Write</li>
-                    <li>Read</li>
-                    <li>Delete</li>
-                </ul>
-            </mat-card-content>
-          </mat-card>
-        <div class="trf-features">
-            <mat-card class="trf-features-card">
+    <div class="trf-layout">
+        <div class="trf-layout-content">
+            <div class="trf-features">
+                <mat-card class="trf-features-card">
+                    <mat-card-content>
+                        <router-outlet />
+
+                        <!-- <mat-grid-list cols="2" rowHeight="2:1">
+                            <mat-grid-tile>
+                                <mat-card style="background-color: #C5CAE9">
+                                    <mat-card-content>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a diam mollis,
+                                        feugiat dui quis,
+                                        mattis velit. Integer sed sapien eu dolor pellentesque elementum. Curabitur
+                                        dignissim, felis id
+                                        convallis vulputate, eros velit tempor nulla, id aliquet ligula sem nec ex.
+                                        Aenean ante nisi,
+                                        condimentum ultricies volutpat eu, venenatis id sapien. Sed at fringilla massa.
+                                        In at pellentesque
+                                        ex, id pellentesque orci. Aenean scelerisque euismod tortor et pellentesque.
+                                        Duis vestibulum
+                                        sed ante id cursus. Maecenas in lectus mattis nunc ultricies placerat at non
+                                        diam.
+                                        Aliquam orci turpis, feugiat sed molestie in, varius vel neque.
+                                    </mat-card-content>
+                                </mat-card>
+                            </mat-grid-tile>
+                            <mat-grid-tile>
+                                <mat-card style="background-color: #C5CAE9">
+                                    <mat-card-content>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a diam mollis,
+                                        feugiat dui quis,
+                                        mattis velit. Integer sed sapien eu dolor pellentesque elementum. Curabitur
+                                        dignissim, felis id
+                                        convallis vulputate, eros velit tempor nulla, id aliquet ligula sem nec ex.
+                                        Aenean ante nisi,
+                                        condimentum ultricies volutpat eu, venenatis id sapien. Sed at fringilla massa.
+                                        In at pellentesque
+                                        ex, id pellentesque orci. Aenean scelerisque euismod tortor et pellentesque.
+                                        Duis vestibulum
+                                        sed ante id cursus. Maecenas in lectus mattis nunc ultricies placerat at non
+                                        diam.
+                                        Aliquam orci turpis, feugiat sed molestie in, varius vel neque.
+                                    </mat-card-content>
+                                </mat-card>
+                            </mat-grid-tile>
+                            <mat-grid-tile>3</mat-grid-tile>
+                            <mat-grid-tile>4</mat-grid-tile>
+                        </mat-grid-list>
+                        -->
+                    </mat-card-content>
+                </mat-card>
+            </div>
+            <mat-card class="trf-role-description">
+                <mat-card-title>Premium user</mat-card-title>
                 <mat-card-content>
-                    <mat-grid-list cols="2" rowHeight="2:1">
-                        <mat-grid-tile>
-                            <mat-card style="background-color: #C5CAE9">
-                                <mat-card-content>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a diam mollis, feugiat dui quis,
-                                     mattis velit. Integer sed sapien eu dolor pellentesque elementum. Curabitur dignissim, felis id
-                                      convallis vulputate, eros velit tempor nulla, id aliquet ligula sem nec ex. Aenean ante nisi,
-                                       condimentum ultricies volutpat eu, venenatis id sapien. Sed at fringilla massa. In at pellentesque 
-                                       ex, id pellentesque orci. Aenean scelerisque euismod tortor et pellentesque. Duis vestibulum
-                                        sed ante id cursus. Maecenas in lectus mattis nunc ultricies placerat at non diam.
-                                         Aliquam orci turpis, feugiat sed molestie in, varius vel neque.
-                                </mat-card-content>
-                            </mat-card>
-                        </mat-grid-tile>
-                        <mat-grid-tile>
-                            <mat-card style="background-color: #C5CAE9">
-                                <mat-card-content>
-                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a diam mollis, feugiat dui quis,
-                                     mattis velit. Integer sed sapien eu dolor pellentesque elementum. Curabitur dignissim, felis id
-                                      convallis vulputate, eros velit tempor nulla, id aliquet ligula sem nec ex. Aenean ante nisi,
-                                       condimentum ultricies volutpat eu, venenatis id sapien. Sed at fringilla massa. In at pellentesque 
-                                       ex, id pellentesque orci. Aenean scelerisque euismod tortor et pellentesque. Duis vestibulum
-                                        sed ante id cursus. Maecenas in lectus mattis nunc ultricies placerat at non diam.
-                                         Aliquam orci turpis, feugiat sed molestie in, varius vel neque.
-                                </mat-card-content>
-                            </mat-card>
-                        </mat-grid-tile>
-                        <mat-grid-tile>3</mat-grid-tile>
-                        <mat-grid-tile>4</mat-grid-tile>
-                      </mat-grid-list>
-                    <router-outlet></router-outlet>
+                    <p>This user has the options to list all features. Permissions are: </p>
+                    <ul>
+                        <li>Write</li>
+                        <li>Read</li>
+                        <li>Delete</li>
+                    </ul>
                 </mat-card-content>
-            </mat-card>  
+            </mat-card>
+
         </div>
     </div>
+    <trf-footer></trf-footer>
 </div>
-<trf-footer></trf-footer>
