--- a/Trustify.Frontend/src/styles.css
+++ b/Trustify.Frontend/src/styles.css
@@ -1,5 +1,15 @@
 /* You can add global styles to this file, and also import other style files */
 
+/* fonts, colors*/
+:root {
+    --trf-primary-font: #283593;
+    --trf-secondary-font: #1A237E;
+    --trf-primary-background: #E8EAF6;
+    --trf-secondary-background: #303F9F;
+    --trf-card-background: white;
+    --trf-primary: #3F51B5;
+}
+
 html,
 body {
     height: 100%;
@@ -9,14 +19,5 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-}
-
-/* fonts, colors*/
-:root {
-    --trf-primary-font: #283593;
-    --trf-secondary-font: #1A237E;
-    --trf-primary-background: #E8EAF6;
-    --trf-secondary-background: #303F9F;
-    --trf-card-background: white;
-    --trf-primary: #3F51B5;
+    color:var(--trf-primary-font);
 }
