Create layout for admin panel

--- a/Trustify.Frontend/src/app/layout/layout/layout/layout.component.html
+++ b/Trustify.Frontend/src/app/layout/layout/layout/layout.component.html
@@ -1,4 +1,4 @@
-<div style="flex-direction: column;justify-content: left;">
+<div class="trf-layout-container">
     <trf-header></trf-header>
     <trf-nav-menu></trf-nav-menu>
     <div class="trf-layout">
@@ -7,50 +7,6 @@
                 <mat-card class="trf-features-card">
                     <mat-card-content>
                         <router-outlet />
-
-                        <!-- <mat-grid-list cols="2" rowHeight="2:1">
-                            <mat-grid-tile>
-                                <mat-card style="background-color: #C5CAE9">
-                                    <mat-card-content>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a diam mollis,
-                                        feugiat dui quis,
-                                        mattis velit. Integer sed sapien eu dolor pellentesque elementum. Curabitur
-                                        dignissim, felis id
-                                        convallis vulputate, eros velit tempor nulla, id aliquet ligula sem nec ex.
-                                        Aenean ante nisi,
-                                        condimentum ultricies volutpat eu, venenatis id sapien. Sed at fringilla massa.
-                                        In at pellentesque
-                                        ex, id pellentesque orci. Aenean scelerisque euismod tortor et pellentesque.
-                                        Duis vestibulum
-                                        sed ante id cursus. Maecenas in lectus mattis nunc ultricies placerat at non
-                                        diam.
-                                        Aliquam orci turpis, feugiat sed molestie in, varius vel neque.
-                                    </mat-card-content>
-                                </mat-card>
-                            </mat-grid-tile>
-                            <mat-grid-tile>
-                                <mat-card style="background-color: #C5CAE9">
-                                    <mat-card-content>
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras a diam mollis,
-                                        feugiat dui quis,
-                                        mattis velit. Integer sed sapien eu dolor pellentesque elementum. Curabitur
-                                        dignissim, felis id
-                                        convallis vulputate, eros velit tempor nulla, id aliquet ligula sem nec ex.
-                                        Aenean ante nisi,
-                                        condimentum ultricies volutpat eu, venenatis id sapien. Sed at fringilla massa.
-                                        In at pellentesque
-                                        ex, id pellentesque orci. Aenean scelerisque euismod tortor et pellentesque.
-                                        Duis vestibulum
-                                        sed ante id cursus. Maecenas in lectus mattis nunc ultricies placerat at non
-                                        diam.
-                                        Aliquam orci turpis, feugiat sed molestie in, varius vel neque.
-                                    </mat-card-content>
-                                </mat-card>
-                            </mat-grid-tile>
-                            <mat-grid-tile>3</mat-grid-tile>
-                            <mat-grid-tile>4</mat-grid-tile>
-                        </mat-grid-list>
-                        -->
                     </mat-card-content>
                 </mat-card>
             </div>
@@ -65,7 +21,6 @@
                     </ul>
                 </mat-card-content>
             </mat-card>
-
         </div>
     </div>
     <trf-footer></trf-footer>
