Implement user dashboard

--- a/Trustify.Admin/src/app/layout/header/header/header.component.html
+++ b/Trustify.Admin/src/app/layout/header/header/header.component.html
@@ -4,11 +4,8 @@
         <span>Trustify</span>
     </div>
     <div class="trf-options">
-        <button mat-icon-button>
-            <mat-icon>person</mat-icon>
-        </button>
-        <button mat-icon-button>
-            <mat-icon>manage_accounts</mat-icon>
+        <button mat-icon-button (click)="goToMainApp()">
+            <mat-icon>home</mat-icon>
         </button>
         <button mat-icon-button>
             <mat-icon>logout</mat-icon>
