--- a/Trustify.Frontend/src/app/layout/header/header/header.component.html
+++ b/Trustify.Frontend/src/app/layout/header/header/header.component.html
@@ -7,7 +7,7 @@
         <button mat-icon-button>
             <mat-icon>person</mat-icon>
         </button>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="openAdminApp()">
             <mat-icon>manage_accounts</mat-icon>
         </button>
         <button mat-icon-button>
