--- a/Trustify.Admin/src/app/features/users/users/users.component.html
+++ b/Trustify.Admin/src/app/features/users/users/users.component.html
@@ -1,1 +1,64 @@
-<p>users works!</p>
+<div class="trf-row trf-end">
+    <button mat-icon-button (click)="addNewUser()"><mat-icon>person_add</mat-icon></button>
+</div>
+<table mat-table [dataSource]="dataSource" class="table mat-elevation-z8" matSort #tbSort="matSort">
+    <ng-container matColumnDef="firstName">
+        <th mat-header-cell *matHeaderCellDef class="trf-10-col">First name</th>
+        <td mat-cell *matCellDef="let element">
+            <div class="content-text">{{element.firstName}}</div>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="lastName">
+        <th mat-header-cell *matHeaderCellDef class="trf-10-col">Last name</th>
+        <td mat-cell *matCellDef="let element">
+            <div class="content-text">{{element.lastName}}</div>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="username">
+        <th mat-header-cell *matHeaderCellDef class="trf-10-col">Username</th>
+        <td mat-cell *matCellDef="let element"> {{element.username}} </td>
+    </ng-container>
+    <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef class="trf-10-col">Email</th>
+        <td mat-cell *matCellDef="let element">
+            <div class="content-text">{{element.email}}</div>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="address">
+        <th mat-header-cell *matHeaderCellDef class="trf-10-col">Address </th>
+        <td mat-cell *matCellDef="let element"> {{element.address}} </td>
+    </ng-container>
+    <ng-container matColumnDef="birthday">
+        <th mat-header-cell *matHeaderCellDef class="trf-10-col">Birthday </th>
+        <td mat-cell *matCellDef="let element"> {{element.birthday| date:'MMM d, y, H:mm'}} </td>
+    </ng-container>
+    <ng-container matColumnDef="isUserActive">
+        <th mat-header-cell *matHeaderCellDef class="trf-10-col">Active</th>
+        <td mat-cell *matCellDef="let element">
+            <div class="content-text">{{element.isUserActive}}</div>
+        </td>
+    </ng-container>
+    <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="mb-products-table-header-large">
+            Actions</th>
+        <td mat-cell *matCellDef="let element">
+            <div class="trf-table-actions">
+                <button mat-icon-button matTooltipPosition="above" (click)="getDetails(element)" matTooltipClass="tooltip" matTooltip="Details">
+                    <mat-icon>details</mat-icon>
+                </button>
+                <button mat-icon-button matTooltipPosition="above" (click)="editUser(element)" matTooltipClass="tooltip" matTooltip="Edit user">
+                    <mat-icon>edit</mat-icon>
+                </button>
+                <button (click)="delete(element.username)" mat-icon-button matTooltipPosition="above"
+                    matTooltipClass="tooltip" matTooltip="Delete user">
+                    <mat-icon>delete</mat-icon>
+                </button>
+            </div>
+        </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns" class="trf-table-header"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="trf-table-row" (click)="select(row)">
+    </tr>
+</table>
+<mat-paginator class="trf-table-paginator" #paginatorPageSize showFirstLastButtons
+    [pageSizeOptions]="pageSizes"></mat-paginator>
