--- a/Trustify.Admin/src/styles.css
+++ b/Trustify.Admin/src/styles.css
@@ -8,6 +8,11 @@
     --trf-secondary-background: #303F9F;
     --trf-card-background: white;
     --trf-primary: #3F51B5;
+    --trf-confirm: #9FA8DA;
+    --trf-confirm-font: #E8EAF6;
+    --trf-cancel: #F48FB1;
+    --trf-neg-primary: #F8BBD0;
+    --trf-neg-primary-font: #FCE4EC;
 }
 
 html,
@@ -19,5 +24,58 @@ body {
     margin: 0;
     padding: 0;
     font-family: Roboto, "Helvetica Neue", sans-serif;
-    color:var(--trf-primary-font);
+    color: var(--trf-primary-font);
+}
+
+.trf-cancel-button {
+    background-color: var(--trf-neg-primary);
+    color: var(--trf-neg-primary-font);
+    width: 100px;
+    text-align: center;
+}
+
+.trf-confirm-button {
+    background-color: var(--trf-primary-background);
+    color: var(--trf-primary-font);
+    width: 100px;
+    text-align: center;
+}
+
+.trf-column {
+    display: flex;
+    flex-direction: column;
+}
+
+.trf-row {
+    display: flex;
+    flex-direction: row;
+}
+
+.trf-end {
+    justify-content: end;
+}
+
+.trf-center {
+    justify-content: center;
+    vertical-align: middle;
+    text-align: center;
+}
+
+.trf-space-between {
+    justify-content: space-between;
+}
+
+.trf-start {
+    justify-content: start;
+}
+
+.trf-dialog-size {
+    width: 30vw;
+    height: 40vh;
+    min-height: 40vh;
+}
+
+.trf-dialog-size-large {
+    width: 50vw;
+    min-height: 40vh;
 }
