--- a/Trustify.Frontend/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
+++ b/Trustify.Frontend/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
@@ -16,5 +16,9 @@
             <mat-icon>newspaper</mat-icon>
             <span>Sections</span>
         </li>
+        <li routerLink="image-generator">
+            <mat-icon>draw_collage</mat-icon>
+            <span>Image generator</span>
+        </li>
     </ul>
 </div>
