--- a/Trustify.Admin/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
+++ b/Trustify.Admin/src/app/layout/nav-menu/nav-menu/nav-menu.component.html
@@ -13,6 +13,10 @@
                 <mat-icon>group</mat-icon>
                 <span>Groups</span>
             </li>
+            <li routerLink='certificates'>
+                <mat-icon>card_membership</mat-icon>
+                <span>Certificates</span>
+            </li>
         </ul>
     </mat-card-content>
 </mat-card>
