--- a/Trustify.Admin/src/app/features/roles/add-role/add-role.component.html
+++ b/Trustify.Admin/src/app/features/roles/add-role/add-role.component.html
@@ -2,7 +2,7 @@
     <h1 mat-dialog-title class="trf-title">
         Add new role
     </h1>
-    <div mat-dialog-content class="trf-content">
+    <div mat-dialog-content class="trf-content" style="min-height: 30vh;">
         <div class="trf-column trf-start">
             <div [formGroup]="addRoleFormGroup" class="trf-column">
                 <mat-form-field>
