--- a/Trustify.Admin/src/app/layout/header/header/header.component.html
+++ b/Trustify.Admin/src/app/layout/header/header/header.component.html
@@ -7,7 +7,7 @@
         <button mat-icon-button (click)="goToMainApp()">
             <mat-icon>home</mat-icon>
         </button>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="logOut()">
             <mat-icon>logout</mat-icon>
         </button>
     </div>
