--- a/Trustify.Admin/src/app/shared/confirm-delete/confirm-delete/confirm-delete.component.html
+++ b/Trustify.Admin/src/app/shared/confirm-delete/confirm-delete/confirm-delete.component.html
@@ -1,6 +1,6 @@
 <div class="trf-modal">
     <h1 mat-dialog-title class="trf-title">Delete</h1>
-    <div mat-dialog-content class="trf-content ">
+    <div mat-dialog-content class="trf-content" style="min-height: 10vh;">
         <p>Are you sure you want to delete this item?</p>
     </div>
     <div mat-dialog-actions class="trf-dialog_actions">
