--- a/Trustify.Admin/src/styles.css
+++ b/Trustify.Admin/src/styles.css
@@ -13,6 +13,10 @@
     --trf-cancel: #F48FB1;
     --trf-neg-primary: #F8BBD0;
     --trf-neg-primary-font: #FCE4EC;
+    --trf-background-tooltip: #9FA8DA;
+    --trf-background-tooltip-error:#F48FB1;
+    --trf-tooltip-font: #1A237E;
+
 }
 
 html,
@@ -79,3 +83,27 @@ body {
     width: 50vw;
     min-height: 50vh;
 }
+
+.trf-tooltip {
+    /* your own custom styles here */
+    /* e.g. */
+    background-color: var(--trf-background-tooltip) !important;
+    color: var(--trf-tooltip-font) !important;
+}
+
+
+.mat-mdc-snack-bar-container {
+    &.trf-snackbar {
+      --mdc-snackbar-container-color: var(--trf-background-tooltip);
+      --mat-mdc-snack-bar-button-color:  var(--trf-tooltip-font);
+      --mdc-snackbar-supporting-text-color:  var(--trf-tooltip-font);
+    }
+  }
+
+  .mat-mdc-snack-bar-container {
+    &.trf-snackbar-error {
+      --mdc-snackbar-container-color: var(--trf-background-tooltip-error);
+      --mat-mdc-snack-bar-button-color:  var( --trf-neg-primary-font);
+      --mdc-snackbar-supporting-text-color:  var( --trf-neg-primary-font);
+    }
+  }
