--- a/Trustify.Frontend/src/app/main/features/sections/sections/sections.component.css
+++ b/Trustify.Frontend/src/app/main/features/sections/sections/sections.component.css
@@ -20,3 +20,9 @@ p {
     margin: 5px;
     text-align: justify;
 }
+
+.content-text {
+    overflow: hidden;
+    text-wrap: nowrap;
+    text-overflow: ellipsis;
+}
