--- a/Trustify.Frontend/src/app/layout/header/header/header.component.html
+++ b/Trustify.Frontend/src/app/layout/header/header/header.component.html
@@ -10,7 +10,7 @@
         <button mat-icon-button (click)="openAdminApp()">
             <mat-icon>manage_accounts</mat-icon>
         </button>
-        <button mat-icon-button>
+        <button mat-icon-button (click)="logOut()">
             <mat-icon>logout</mat-icon>
         </button>
     </div>
