--- a/Trustify.Frontend/src/app/layout/layout/layout/layout.component.html
+++ b/Trustify.Frontend/src/app/layout/layout/layout/layout.component.html
@@ -11,11 +11,14 @@
                 </mat-card>
             </div>
             <mat-card class="trf-role-description">
-                <mat-card-title>Premium user</mat-card-title>
+                <mat-card-title class="trf-user-title">
+                    <mat-icon>person</mat-icon><span>User data</span></mat-card-title>
                 <mat-card-content>
-                    <p>This user has the options to list all features. Roles are: </p>
-                    <ul>
-                        @for(role of userRoles.roles; track role){
+                    <p>Name:     {{userData?.firstName}} {{userData?.lastName}} </p>
+                    <p>Email:    {{userData?.email}}</p>
+                    <p>Username: {{userData?.username}}</p>
+                    Roles:  <ul>
+                        @for(role of userData?.roles; track role){
                         <li>
                             {{role}}
                         </li>}
