--- a/Trustify.Frontend/src/app/main/features/image-content/image-card/image-card.component.html
+++ b/Trustify.Frontend/src/app/main/features/image-content/image-card/image-card.component.html
@@ -7,7 +7,8 @@
     </mat-card-header>
     <img mat-card-image [src]="image" class="trf-image-card-image">
     <mat-card-actions class="trf-image-card-actions">
-        <button mat-icon-button><mat-icon>delete</mat-icon></button>
-        <button mat-icon-button><mat-icon>edit</mat-icon></button>
+        <button mat-icon-button (click)="delete()"><mat-icon>delete</mat-icon></button>
+        <button mat-icon-button (click)="download()"><mat-icon>
+                download</mat-icon></button>
     </mat-card-actions>
 </mat-card>
